# TemplateRepo

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  version.cmake
Executable/: CMakeLists.txt  main.cpp
Playground/: CMakeLists.txt  main.cpp
Shared/: CMakeLists.txt
Shared/Lib/: CMakeLists.txt
Shared/ProtoFiles/: CMakeLists.txt  addressbook.proto
Shared/ProtoFiles/test/: CMakeLists.txt  ProtoFilesTestMain.cpp
